<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/reminderTime"
        android:icon="@drawable/ic_remindertime_primary"
        android:title="@string/reminderTime" />

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive_primary"
        android:title="@string/archiveLabel" />

    <item
        android:id="@+id/addToHome"
        android:icon="@drawable/ic_add_to_home"
        android:title="@string/addToHome" />

    <item
        android:id="@+id/swapText"
        android:icon="@drawable/ic_swap_text"
        android:title="@string/swapText" />

    <item android:id="@+id/lock"
        android:icon="@drawable/ic_lock"
        android:title="@string/lock"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_primary"
        android:title="@string/deleteLabel" />
</menu>