<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_top_20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:padding="@dimen/dp6"
            android:src="@drawable/ic_close_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProtectEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/set_protect_email"
            android:textColor="@color/neutral500"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/add_an_email_to_help_you_reset"
            android:textSize="16sp"
            android:textColor="@color/neutral400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProtectEmail" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/enter_email"
            android:singleLine="true"
            android:textColor="@color/neutral500"
            android:textColorHint="@color/neutral300"
            android:textSize="16sp"
            app:layout_constraintDimensionRatio="263:26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContent"
            app:layout_constraintWidth_percent="0.73" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/neutral500"
            android:ellipsize="end"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/edEmail"
            app:layout_constraintStart_toStartOf="@id/edEmail"
            app:layout_constraintTop_toBottomOf="@id/edEmail" />

        <EditText
            android:id="@+id/edConfirmEmail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semi_bold"
            android:hint="@string/confirm_email"
            android:textColor="@color/neutral500"
            android:textColorHint="@color/neutral300"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            app:layout_constraintDimensionRatio="263:26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintWidth_percent="0.73" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/neutral500"
            app:layout_constraintEnd_toEndOf="@id/edEmail"
            app:layout_constraintStart_toStartOf="@id/edEmail"
            app:layout_constraintTop_toBottomOf="@id/edConfirmEmail" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_blue_radius_100dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="295:48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintWidth_percent="0.81" />

        <TextView
            android:id="@+id/tvNotSame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold_italic"
            android:text="@string/emails_are_not_the_same"
            android:textColor="#FF5252"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tvDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
